# assembly_lang_stuff

./: .gitignore  README.md  Vagrantfile  hello_star
ASM_projects/ex1/: asmtut.s  asmtut2.s  asmtut3.s
ASM_projects/ex2/: asmtut.s
ASM_projects/ex3/: asmtut.s
ASM_projects/ex4/: Makefile  asmtut.s
ASM_projects/ex5/: asmtut.s
ASM_projects/ex5/ex5.5/: asmtut.s
ASM_projects/ex6/: asmtut.s
ASM_projects/ex7_if/: asmtut.s
ASM_projects/ex8/: asmtut.s
ASM_projects/ex8.4/: asmtut.s
ASM_projects/ex8.5/: asmtut.s
ASM_projects/ex8.6/: asmtut.s  run_as.sh
ASM_projects/ex8.6b/: asmtut.s  run_as.sh
ASM_projects/ex9/: asmtut.s
ASM_projects/ex9b/: asmtut.s  run_as.sh
ex1/: Makefile  helloworld.S
ex2/: README  configure.ac
ex2.5/: README  README.md  configure  configure.ac
ex2/src/: Makefile.am
intel_x86/ex2/: Makefile  hello_star.asm
intel_x86/ex2.5/src/: Makefile.am  main.c
