nlb this line is a comment!

nlb this line is required to run autoconf
nlb in this line we specify some project details
AC_INIT([assembler-stuff] [2020-05-07] [a.coleman1@leeds.ac.uk])

nlb this line is required to run autoconf
AC_OUTPUT

nlb now onto the section that makes are Makefile
AM_INIT_AUTOMAKE

nlb takes 1 arg, the name of our output file
AC_CONFIG_FILES([Makefile])

nlb specify the compiler
nlb we want to use nasm
AX_PROG_NASM

